1.10/README.MD
                                  GRAFIX 1.1

                          Graphics And Sound Support
                  For The Tandy 1000 Series Personal Computer

                              Joseph A. Albrecht
                         9250 Old Cedar Ave  Apt. 215
                            Bloomington, MN  55425

                              GEnie EMail Address:
                                  A.ALBRECHT


This package should contain the following files:

DEMO     ASM - Source code for demo program
GRAFIX   ASM - Source code for the GRAFIX program
INT10A   ASM - Source code for QuickBASIC 4.0 BIOS INT 10H interface
INT10B   ASM -   "     "    "      "       "   "    "   "      "
GRAFIX   BAS - QuickBASIC 4.0 calling interface
ARTY     BAS - QuickBASIC 4.0 demo programs
BALL     BAS -     "       "   "      "
BOXSCAPE BAS -     "       "   "      "
BUTCONES BAS -     "       "   "      "
HORSE    BAS -     "       "   "      "
KALIDO   BAS -     "       "   "      "
LINES    BAS -     "       "   "      "
NOVAMAX  BAS -     "       "   "      "
P-DEMO1  BAS -     "       "   "      "
P-DEMO2  BAS -     "       "   "      "
PUT-1    BAS -     "       "   "      "
RNDBOXES BAS -     "       "   "      "
WORMY    BAS -     "       "   "      "
BUTTER   BIN - Saved graphic images for QuickBASIC 4.0 demo programs
HORSE1   BIN -   "      "      "     "      "       "    "      "
HORSE2   BIN -   "      "      "     "      "       "    "      "
HORSE3   BIN -   "      "      "     "      "       "    "      "
HORSE4   BIN -   "      "      "     "      "       "    "      "
HORSE5   BIN -   "      "      "     "      "       "    "      "
P-DEMO1  BIN -   "      "      "     "      "       "    "      "
P-DEMO2  BIN -   "      "      "     "      "       "    "      "
DEMO     COM - Demo program to show some of GRAFIX capabilities
GRAFIX   COM - GRAFIX program
GRAFIX   DEF - Include file for QuickBASIC 4.0 programs
GRAFBAS  DOC - GRAFIX documentation (QuickBASIC interface)
GRAFIX   DOC - GRAFIX documentation (Assembler interface)
README   DOC - This file
GRAFIX   LIB - QuickBASIC GRAFIX library
GRAFIX   QLB - QuickBASIC GRAFIX quick library

To get started using this package simply type GRAFIX from the DOS prompt and try
out the accompanying demo program DEMO.COM.  This gives a short overview of some
of the things you can do with GRAFIX. If you have QuickBASIC 4.0 you can try out
those demo  programs too. To use  the QuickBASIC interface simply  type from the
DOS prompt QB  /L GRAFIX. This will load the  accompanying GRAFIX quick library.
You MUST do this in order to use any of the QuickBASIC demo programs.
